# keyflux

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  MUTATION-TESTING.md  Makefile  PRE-MORTEM.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  quickstart.md  troubleshooting.md
docs/api/: allotaxonograph.md  allotaxonometer.md  classify.md  corpus.md  datasets.md  keyness.md  measures.md  rankedlist.md  rtd.md
docs/examples/: allotaxonograph_demo.md  keyness_quickstart.md  presidential_speeches.md
docs/tutorials/: keyness_walkthrough.md  rtd_allotaxonograph.md  two_views.md
examples/: allotaxonograph_demo.py  keyness_quickstart.py  presidential_speeches.ipynb  presidential_speeches.py
examples/data/: speeches_1825-1849.tsv  speeches_1900-1924.tsv  speeches_1950-1974.tsv  speeches_2000-2024.tsv
src/keyflux/: __init__.py  _types.py
src/keyflux/datasets/: __init__.py
src/keyflux/divergence/: __init__.py  rtd.py
src/keyflux/io/: __init__.py  corpus.py
src/keyflux/keyness/: __init__.py  classify.py  keyness.py  measures.py
src/keyflux/ranking/: __init__.py  rankedlist.py
src/keyflux/viz/: __init__.py  allotaxonograph.py  allotaxonometer.py
tests/: conftest.py  strategies.py  test_allotaxonograph.py  test_allotaxonometer.py  test_classify.py  test_corpus.py  test_datasets.py  test_keyness.py  test_measures.py  test_package.py  test_rankedlist.py  test_rtd.py
