[project]
name = "keyflux"
version = "0.1.1"
description = "Corpus keyness, rank-turbulence divergence, and allotaxonographs"
readme = "README.md"
authors = [
    { name = "Zoltan Varju", email = "zoltan.varju@crowintelligence.org" },
    { name = "Orsolya Putz", email = "orsolya.putz@crowintelligence.org" },
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "nlp",
    "keyness",
    "keywords",
    "corpus-linguistics",
    "rank-turbulence-divergence",
    "allotaxonometry",
    "text-analysis",
    "computational-humanities",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://crowintelligence.org/"
Repository = "https://github.com/crow-intelligence/keyflux"
Documentation = "https://keyflux.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "ty",
    "mutmut>=3",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "D"]
ignore = ["D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D102", "D103", "D104", "ANN"]
"examples/**" = ["D100", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--doctest-modules --tb=short"
testpaths = ["src", "tests"]

# Mutation testing (dev-only, not run in CI). Scoped to the math-heavy core and
# its fast, plotting-free test files. Run with `uv run mutmut run`.
[tool.mutmut]
source_paths = ["src/keyflux"]
only_mutate = [
    "src/keyflux/keyness/measures.py",
    "src/keyflux/keyness/keyness.py",
    "src/keyflux/ranking/rankedlist.py",
    "src/keyflux/divergence/rtd.py",
]
pytest_add_cli_args_test_selection = [
    "tests/test_measures.py",
    "tests/test_keyness.py",
    "tests/test_rankedlist.py",
    "tests/test_rtd.py",
]
pytest_add_cli_args = ["-p", "no:cacheprovider"]

[tool.ty]
